--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "yarn build:server && yarn build:client",
+    "build:client": "webpack --mode production",
+    "build:server": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "xgao",
-	"license": "MIT",
-	"devDepdencies": {
+  "license": "MIT",
+  "devDependencies": {
     "@types/lodash": "^4.14.88",
     "@types/react": "^16.0.28",
     "@types/react-dom": "^16.0.3",
-    "@types/react-loadable": "^5.3.0",
     "awesome-typescript-loader": "^3.4.1",
-    "source-map-loader": "^0.2.3",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
-	},
+    "source-map-loader": "^0.2.3"
+  },
   "dependencies": {
+    "@types/node": "^10.3.2",
+    "@types/react-loadable": "^5.4.0",
+    "global": "^4.3.2",
+    "nodemon": "^1.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-loadable": "^5.3.1"
+    "react-loadable": "^5.4.0",
+    "ts-loader": "^4.4.0",
+    "typescript": "^2.9.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3"
   }
 }
